--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ addons:
 env:
   global:
     - SAUCE_USERNAME=snay
+    - TRAVIS_NODE_VERSION=6
 
 language: node_js
-node_js: "6"
 
 matrix:
   include:
