--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,6 @@ env:
     - SAUCE_USERNAME=snay
     - TRAVIS_NODE_VERSION=6
 
-language: node_js
-
 matrix:
   include:
     - env: PLATFORM=browser-chrome
@@ -53,13 +51,11 @@ matrix:
           - build-tools-26.0.2
 
 before_install:
-  # language: android has no Node.js installed, therfore it's needed to install it manually
-  - if [[ "$PLATFORM" =~ android ]]; then nvm install $TRAVIS_NODE_VERSION; fi
+  - nvm install $TRAVIS_NODE_VERSION
   - node --version
   - if [[ "$PLATFORM" =~ android ]]; then gradle --version; fi
   - if [[ "$PLATFORM" =~ ios ]]; then npm install -g ios-deploy; fi
-  - if [[ "$PLATFORM" =~ android ]]; then echo y | android update sdk -u --filter android-22,android-23,android-24,android-25,android-26,android-27;
-    fi
+  - if [[ "$PLATFORM" =~ android ]]; then echo y | android update sdk -u --filter android-22,android-23,android-24,android-25,android-26,android-27; fi
   - npm install -g cordova-paramedic@https://github.com/apache/cordova-paramedic.git
   - npm install -g cordova
 
